--- a/store/app/globals.css
+++ b/store/app/globals.css
@@ -1,6 +1,34 @@
 @import "tailwindcss";
 @tailwind utilities;
 
+ * {
+    @apply scroll-smooth;
+  }
+
+  /* body {
+    @apply bg-white text-dark-200 min-h-screen;
+  } */
+  /* Remove scrollbar */
+  .remove-scrollbar::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+    border-radius: 0px;
+  }
+
+  .remove-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .remove-scrollbar::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 0px;
+  }
+
+  .remove-scrollbar::-webkit-scrollbar-thumb:hover {
+    /* background: #1e2238; */
+    background: transparent;
+  }
+
 @layer utilities {
   .center {
     @apply flex h-screen justify-center items-center bg-amber-100;
